chore: add TODO comments and use getFirst() for code style
- Add TODOs for future improvements to auth flow tests
- Replace get(0) with getFirst() for cleaner list access